// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Size payload sanity test should fail with array of 3 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:0:policies": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "Policy",
          "fieldName": "policies",
          "fieldPath": "policies",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "min": 2,
              "sizeOrientation": "EQUALS",
              "success": false,
              "type": 2,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "SIZE",
              "ruleName": "SizePayloadEquals",
              "targetPath": "policies",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "min": 2,
              "sizeOrientation": "MIN",
              "success": true,
              "type": 2,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "SIZE",
              "ruleName": "SizePayloadMin",
              "targetPath": "policies",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "min": 2,
              "sizeOrientation": "MAX",
              "success": false,
              "type": 2,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "SIZE",
              "ruleName": "SizePayloadMax",
              "targetPath": "policies",
            },
          },
        ],
      },
    },
  },
  "fieldResults": Object {
    "Policy:0:policies": Object {
      "fieldType": "STRING",
      "id": "Policy:0:policies",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policies",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-size-error",
          "errorMessage": "Array length is invalid",
          "isFailed": true,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "min": 2,
            "sizeOrientation": "EQUALS",
            "success": false,
            "type": 2,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "SizePayloadEquals",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-size-error",
          "errorMessage": "Array length is invalid",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "min": 2,
            "sizeOrientation": "MIN",
            "success": true,
            "type": 2,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "SizePayloadMin",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-size-error",
          "errorMessage": "Array length is invalid",
          "isFailed": true,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "min": 2,
            "sizeOrientation": "MAX",
            "success": false,
            "type": 2,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "SizePayloadMax",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
  },
}
`;

exports[`Size payload sanity test should handle undefined collection 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:0:policies": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "Policy",
          "fieldName": "policies",
          "fieldPath": "policies",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "min": 2,
              "sizeOrientation": "EQUALS",
              "success": false,
              "type": 2,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "SIZE",
              "ruleName": "SizePayloadEquals",
              "targetPath": "policies",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "min": 2,
              "sizeOrientation": "MIN",
              "success": false,
              "type": 2,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "SIZE",
              "ruleName": "SizePayloadMin",
              "targetPath": "policies",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "min": 2,
              "sizeOrientation": "MAX",
              "success": true,
              "type": 2,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "SIZE",
              "ruleName": "SizePayloadMax",
              "targetPath": "policies",
            },
          },
        ],
      },
    },
  },
  "fieldResults": Object {
    "Policy:0:policies": Object {
      "fieldType": "STRING",
      "id": "Policy:0:policies",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policies",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-size-error",
          "errorMessage": "Array length is invalid",
          "isFailed": true,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "min": 2,
            "sizeOrientation": "EQUALS",
            "success": false,
            "type": 2,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "SizePayloadEquals",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-size-error",
          "errorMessage": "Array length is invalid",
          "isFailed": true,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "min": 2,
            "sizeOrientation": "MIN",
            "success": false,
            "type": 2,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "SizePayloadMin",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-size-error",
          "errorMessage": "Array length is invalid",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "min": 2,
            "sizeOrientation": "MAX",
            "success": true,
            "type": 2,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "SizePayloadMax",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
  },
}
`;

exports[`Size payload sanity test should success with array of 2 1`] = `
Object {
  "entryPointResults": Object {
    "evaluationTimestamp": Any<Date>,
    "results": Object {
      "Policy:0:policies": Object {
        "contextFieldInfo": DefaultContextFieldInfo {
          "contextId": "0",
          "contextName": "Policy",
          "fieldName": "policies",
          "fieldPath": "policies",
          "fieldType": "STRING",
        },
        "ruleResults": Array [
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "min": 2,
              "sizeOrientation": "EQUALS",
              "success": true,
              "type": 2,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "SIZE",
              "ruleName": "SizePayloadEquals",
              "targetPath": "policies",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "min": 2,
              "sizeOrientation": "MIN",
              "success": true,
              "type": 2,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "SIZE",
              "ruleName": "SizePayloadMin",
              "targetPath": "policies",
            },
          },
          Object {
            "conditionEvaluationResult": DefaultConditionEvaluationResult {
              "conditionEvaluation": "APPLICABLE",
              "error": undefined,
            },
            "kind": 2,
            "overrideInfo": Object {
              "overridable": false,
              "overrideApplicable": false,
              "overrideGroup": undefined,
            },
            "payloadResult": Object {
              "message": undefined,
              "min": 2,
              "sizeOrientation": "MAX",
              "success": true,
              "type": 2,
              "validationSeverity": "critical",
            },
            "ruleInfo": DefaultRuleInfo {
              "context": "Policy",
              "payloadtype": "SIZE",
              "ruleName": "SizePayloadMax",
              "targetPath": "policies",
            },
          },
        ],
      },
    },
  },
  "fieldResults": Object {
    "Policy:0:policies": Object {
      "fieldType": "STRING",
      "id": "Policy:0:policies",
      "info": Object {
        "getContextInstanceId": [Function],
        "getContextName": [Function],
      },
      "isDisabled": undefined,
      "isHidden": undefined,
      "resolvedTargetPath": "policies",
      "ruleResults": Array [
        Object {
          "errorCode": "rule-size-error",
          "errorMessage": "Array length is invalid",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "min": 2,
            "sizeOrientation": "EQUALS",
            "success": true,
            "type": 2,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "SizePayloadEquals",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-size-error",
          "errorMessage": "Array length is invalid",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "min": 2,
            "sizeOrientation": "MIN",
            "success": true,
            "type": 2,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "SizePayloadMin",
          "severity": "critical",
          "templateVariables": Array [],
        },
        Object {
          "errorCode": "rule-size-error",
          "errorMessage": "Array length is invalid",
          "isFailed": false,
          "isOverridable": false,
          "isOverridden": false,
          "payloadResult": Object {
            "message": undefined,
            "min": 2,
            "sizeOrientation": "MAX",
            "success": true,
            "type": 2,
            "validationSeverity": "critical",
          },
          "rawTemplateVariables": Array [],
          "ruleName": "SizePayloadMax",
          "severity": "critical",
          "templateVariables": Array [],
        },
      ],
    },
  },
}
`;
